icon of team sub-menu fix and align space submenu link

--- a/src/layout/Sidebar/settings-sidebar.scss
+++ b/src/layout/Sidebar/settings-sidebar.scss
@@ -90,6 +90,7 @@
     background: rgba(255, 255, 255, 0.2);
     color: #ffffff;
     flex: 0 0 auto;
+    margin-right: 10px;
 }
 
 .settings-sidebar-footer {
